# Continuous-CBS

./: .gitignore  .travis.yml  CBS-SIPP.pro  CMakeLists.txt  LICENSE.md  README.md  cbs.cpp  cbs.h  collision_interval.h  config.cpp  config.h  const.h  graph.cpp  graph.h  heuristic.cpp  heuristic.h  lineofsight.h  main.cpp  map.cpp  map.h  new_features.cpp  pheuristic.h  sipp.cpp  sipp.h  states_container.h  structs.h  task.cpp  task.h  to_aa_sipp.cpp  to_aa_sipp.h  xml_logger.cpp  xml_logger.h
.github/workflows/: build.yml
Examples/: config.xml  grid_map_log.xml  grid_task.xml  grid_task_log.xml  map.xml  roadmap.xml  roadmap_task.xml  roadmap_task_log.xml  task.xml  task_log.xml
ExpResults/: AA-CCBS_raw_data.xlsx  AAAI21_experiments_raw_data.xlsx
TO-AA-SIPP/: lineofsight.h  pheuristic.h  states_container.h  to_aa_sipp.cpp  to_aa_sipp.h
simplex/: columnset.cpp  columnset.h  constraint.cpp  constraint.h  datamismatchexception.h  divisionbyzeroexception.h  indexoutofboundexception.h  matrix.cpp  matrix.h  matrixissingularexception.h  matrixnotsquareexception.h  memoryreachedoutexception.h  notavectorexception.h  objectivefunction.cpp  objectivefunction.h  pilal.h  pilalexceptions.h  simplex.cpp  simplex.h  simplexexceptions.h  sizemismatchexception.h  variable.cpp  variable.h
